crates/toml/tests/snapshots/invalid/ext/table/duplicate-key-1.stderr
TOML parse error at line 3, column 2
  |
3 | [a.b]
  |  ^^^
duplicate key

---
TOML parse error at line 4, column 1
  |
4 | c = 2
  | ^
duplicate key
